--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ru">
+<html lang="en">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -14,18 +14,18 @@
 <div class="section1">
     <header>
         <a href="index.html" class="header__logo">
-            <img src="build/img/icon/logo.svg">
+            <img src="build/img/icon/logo.svg" alt="icon">
             <span>geriana</span>
         </a>
         <button class="header__button-help">
-            <img src="build/img/icon/questionmark.svg">
+            <img src="build/img/icon/questionmark.svg" alt="icon">
             Help Center
         </button>
         <button class="header__call-us">&#169;Call US</button>
         <a href="#" class="header__sign">Sign Up</a>
         <a href="#" class="header__log">Log In</a>
         <a href="#" class="header__menu">
-            <img src="build/img/icon/hamburger.svg">
+            <img src="build/img/icon/hamburger.svg" alt="icon">
             <span>Menu</span>
         </a>
     </header>
@@ -43,7 +43,7 @@
         <h2>Specjaliści Różnych Kategorii</h2>
         <div class="content-wrapper">
             <div class="section1-content">
-                <img src="build/img/icon/icon1.svg" class="section1-icon1">
+                <img src="build/img/icon/icon1.svg" class="section1-icon1" alt="icon">
                 <h3>Opiekunowie <br>
                     z doświadczeniem</h3>
                 <span>
@@ -53,7 +53,7 @@
                 </span>
             </div>
             <div class="section1-content">
-                <img src="build/img/icon/icon2.svg" class="section1-icon2">
+                <img src="build/img/icon/icon2.svg" class="section1-icon2" alt="icon">
                 <h3>Masażyści</h3>
                 <span>
                     10,000 zarejestrowanych opiekunów
@@ -62,7 +62,7 @@
                 </span>
             </div>
             <div class="section1-content">
-                <img src="build/img/icon/icon3.svg" class="section1-icon3">
+                <img src="build/img/icon/icon3.svg" class="section1-icon3" alt="icon">
                 <h3>Pielęgniarki i opiekunowie
                     medyczni</h3>
                 <span>
@@ -72,7 +72,7 @@
                 </span>
             </div>
             <div class="section1-content">
-                <img src="build/img/icon/icon4.svg" class="section1-icon4">
+                <img src="build/img/icon/icon4.svg" class="section1-icon4" alt="icon">
                 <h3>Fizjoterapeuci</h3>
                 <span>
                     10,000 zarejestrowanych opiekunów
@@ -95,7 +95,7 @@
     </div>
     <div class="section4__block2">
         <div class="section4__subBlock section4__subBlock1">
-           <img src="build/img/icon/search.svg" class="subBlock__icon">
+           <img src="build/img/icon/search.svg" class="subBlock__icon" alt="icon">
            <div class="wrapper">
                <h3>Search a Caregiver</h3>
                <span>
@@ -104,10 +104,10 @@
                    wymaganymi kwalifikacjami.
                </span>
            </div>
-           <img src="build/img/icon/arrow.svg" class="subBlock__arrow">
+           <img src="build/img/icon/arrow.svg" class="subBlock__arrow" alt="icon">
        </div>
        <div class="section4__subBlock section4__subBlock2">
-            <img src="build/img/icon/arrow.svg" class="subBlock__arrow">
+            <img src="build/img/icon/arrow.svg" class="subBlock__arrow" alt="icon">
             <div class="wrapper">
                 <h3>Select a Caregiver</h3>
                 <span>
@@ -118,10 +118,10 @@
                   wybraną osobą.
                </span>
             </div>
-            <img src="build/img/icon/mouse.svg" class="subBlock__icon">
+            <img src="build/img/icon/mouse.svg" class="subBlock__icon" alt="icon">
        </div>
        <div class="section4__subBlock section4__subBlock3">
-            <img src="build/img/icon/time.svg" class="subBlock__icon">
+            <img src="build/img/icon/time.svg" class="subBlock__icon" alt="icon">
             <div class="wrapper">
                 <h3>Test Period</h3>
                 <span>
@@ -130,7 +130,7 @@
                   zostaje na dłużej.
                </span>
             </div>
-            <img src="build/img/icon/arrow.svg" class="subBlock__arrow">
+            <img src="build/img/icon/arrow.svg" class="subBlock__arrow" alt="icon">
         </div>
         <div class="section4__subBlock section4__subBlock4">
             <div class="wrapper">
@@ -143,7 +143,7 @@
                   wybraną osobą.
                </span>
             </div>
-            <img src="build/img/icon/dollar.svg" class="subBlock__icon">
+            <img src="build/img/icon/dollar.svg" class="subBlock__icon" alt="icon">
         </div>
     </div>
 </div>
@@ -166,7 +166,7 @@
                     <h3>Aneta, 39l</h3>
                     <h4>Service provider</h4>
                 </div>
-                <img src="build/img/icon/aneta39l.png">
+                <img src="build/img/icon/aneta39l.png" alt="icon">
             </div>
         </div>
         <div class="review-wrapper">
@@ -182,7 +182,7 @@
                     <h3>Katarzyna, 51 lat</h3>
                     <h4>Client</h4>
                 </div>
-                <img src="build/img/icon/katarzyna51.png">
+                <img src="build/img/icon/katarzyna51.png" alt="icon">
             </div>
         </div>
         <div class="review-wrapper">
@@ -198,7 +198,7 @@
                     <h3>Aneta, 39l</h3>
                     <h4>Service provider</h4>
                 </div>
-                <img src="build/img/icon/aneta39l.png">
+                <img src="build/img/icon/aneta39l.png" alt="icon">
             </div>
         </div>
         <div class="review-wrapper">
@@ -214,7 +214,7 @@
                     <h3>Aneta, 39l</h3>
                     <h4>Service provider</h4>
                 </div>
-                <img src="build/img/icon/aneta39l.png">
+                <img src="build/img/icon/aneta39l.png" alt="icon">
             </div>
         </div>
         <div class="review-wrapper">
@@ -230,7 +230,7 @@
                     <h3>Katarzyna, 51 lat</h3>
                     <h4>Client</h4>
                 </div>
-                <img src="build/img/icon/katarzyna51.png">
+                <img src="build/img/icon/katarzyna51.png" alt="icon">
             </div>
         </div>
         <div class="review-wrapper">
@@ -246,7 +246,7 @@
                     <h3>Aneta, 39l</h3>
                     <h4>Service provider</h4>
                 </div>
-                <img src="build/img/icon/aneta39l.png">
+                <img src="build/img/icon/aneta39l.png" alt="icon">
             </div>
         </div>
     </div>
@@ -295,7 +295,7 @@
         <h2>Nasze Mocne</h2>
         <h2>Strony</h2>
         <button class="button-transparent">ZNAJDŹ OPIEKUNKĘ</button>
-        <img src="build/img/icon/section8bg.svg">
+        <img src="build/img/icon/section8bg.svg" alt="icon">
     </div>
 </div>
 <div class="section9">
@@ -307,18 +307,18 @@
     <div class="footer__subBlock1-logo">
         <div class="wrapper">
             <a href="index.html" class="footer-logo">
-                <img src="build/img/icon/logo.svg">
+                <img src="build/img/icon/logo.svg" alt="icon">
                 <h2>geriana</h2>
             </a>
             <h3>Follow Us</h3>
             <a href="https://uk-ua.facebook.com/" target="_blank" class="footer__facebook">
-                <img src="build/img/icon/facebook.svg">
+                <img src="build/img/icon/facebook.svg" alt="icon">
             </a>
             <a href="https://twitter.com/?lang=ru" target="_blank" class="footer__twitter">
-                <img src="build/img/icon/twitter.svg">
+                <img src="build/img/icon/twitter.svg" alt="icon">
             </a>
             <a href="https://www.instagram.com/?hl=ru" target="_blank" class="footer__instagram">
-                <img src="build/img/icon/instagram.svg">
+                <img src="build/img/icon/instagram.svg" alt="icon">
             </a>
             <span>© 2018 Geriana. All rights reserved.</span>
         </div>
